<resources>
    <string name="app_name">Manor Browser</string>
    <string name="action_search">Search or enter web address</string>
    <string name="action_home">Home</string>
    <string name="action_history">History</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_back">Back</string>
    <string name="title_new_tab">New Tab</string>
    <string name="title_settings">Settings</string>
    <string name="action_close_all_tabs_in_group">Close all tabs in current group</string>
    <string name="action_save_to_new_group">Save to new group</string>
    <string name="action_switch_to_group">Switch to group: %1$s</string>
    <string name="action_return_to_default_group">Return to default group</string>
    <string name="title_new_tab_group">New Group Name</string>
    <string name="hint_tab_group_name">Enter group name</string>
    <string name="msg_tab_group_saved">Saved to new group</string>
    <string name="default_group_name">Default Group</string>
    <string name="msg_group_closed">Group %1$s has been closed</string>
    <string name="label_default_search_engine">Default Search Engine</string>
    <string name="engine_baidu">Baidu</string>
    <string name="engine_google">Google</string>
    <string name="pref_key_search_engine">search_engine_preference</string>
    <string name="title_history">History</string>
    <string name="action_select_search_engine">Select Search Engine</string>
    <string name="msg_current_engine">Current: %1$s</string>
    <string name="hint_search">Search or enter web address</string>
    <string name="general_settings">General</string>
    <string name="search_engine_title">Default Search Engine</string>
    <string name="search_engine_subtitle">Currently Selected</string>
    <string name="nav_header_desc">Your Private Manor</string>
    <string name="action_theme">Day/Night Mode</string>
    <string name="action_add_bookmark">Add Bookmark</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="title_add_bookmark">Add Bookmark</string>
    <string name="label_bookmark_title">Title</string>
    <string name="label_bookmark_url">URL</string>
    <string name="msg_bookmark_added">Bookmark added!</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="action_add_folder">Add Folder</string>
    <string name="title_new_folder">New Folder</string>
    <string name="action_downloads">Downloads</string>
    <string name="desc_back">Back</string>
    <string name="desc_refresh">Refresh</string>
    <string name="desc_home">Home</string>
    <string name="desc_tabs">Tabs</string>
    <string name="desc_menu">Menu</string>
    <string name="desc_tab_preview">Tab Preview</string>
    <string name="desc_icon">Icon</string>
    <string name="tab_count_template">%1$d / %2$d</string>
    <string name="history_empty">No browsing history</string>
    <string name="clear_history">Clear All History</string>
    <string name="history_empty_confirm">Are you sure you want to clear all history? This cannot be undone.</string>
    <string name="home_slogan">Your Private Manor</string>
    <string name="title_background_effect">Background Effect</string>
    <string name="bg_effect_meteor">Meteor Shower</string>
    <string name="bg_effect_rain">Rainy Day</string>
    <string name="bg_effect_snow">Snowy Day</string>
    <string name="bg_effect_aurora">Aurora Night</string>
    <string name="bg_effect_sakura">Sakura Rain</string>
    <string name="bg_effect_solid">Solid Color</string>
    <string name="bg_effect_image">Custom Image</string>
    <string name="bg_effect_desc">Select dynamic background effect</string>
    <string name="pref_bg_pick_color">Pick Color</string>
    <string name="pref_bg_pick_image">Pick Image from Gallery</string>
    <string name="msg_pick_image_failed">Failed to pick image</string>
    <string name="dialog_pick_color">Pick Background Color</string>
    <string name="action_select">Select</string>
    <string name="msg_download_starting">Starting download...</string>
    <string name="msg_download_start_failed">Failed to start download</string>
    <string name="download_status_waiting">Waiting...</string>
    <string name="download_status_running">Downloading... %1$d%%</string>
    <string name="download_status_paused">Paused</string>
    <string name="download_status_completed">Completed</string>
    <string name="download_status_failed">Failed</string>
    <string name="download_status_unknown">Unknown</string>
    <string name="msg_download_start">Start Downloading: %1$s</string>
    <string name="msg_download_failed">Download Failed: %1$s</string>
    <string name="msg_download_cancelled">Cancelled</string>
    <string name="msg_file_open_error">Cannot open file: %1$s</string>
    <string name="msg_file_not_found">File not found or moved.</string>
    <string name="msg_retry_download">Cannot retry directly, try downloading again.</string>
    <string name="paused_waiting_to_retry">Waiting to retry</string>
    <string name="paused_waiting_for_network">Waiting for network</string>
    <string name="paused_queued_for_wifi">Waiting for Wi-Fi</string>
    <string name="error_cannot_resume">Cannot resume</string>
    <string name="error_device_not_found">Storage not found</string>
    <string name="error_file_already_exists">File already exists</string>
    <string name="error_file_error">File error</string>
    <string name="error_http_data_error">HTTP data error</string>
    <string name="error_insufficient_space">Insufficient space</string>
    <string name="error_too_many_redirects">Too many redirects</string>
    <string name="error_unhandled_http_code">Unhandled HTTP code</string>
    <string name="error_unknown">Error code: %1$d</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_with_file">Delete File and Record</string>
    <string name="action_delete_record_only">Delete Record Only (Keep File)</string>
    <string name="msg_confirm_delete_download">Choose how to remove this download:</string>
    <string name="action_open_new_tab">Open in New Tab</string>
    <string name="action_download">Download</string>
    <string name="action_download_link">Download Linked File</string>
    <string name="title_save_password">Save Password?</string>
    <string name="msg_save_password">Do you want to save the password for %1$s?</string>
    <string name="action_save">Save</string>
    <string name="action_never">Never</string>
    <string name="title_select_account">Select Account</string>
    <string name="msg_password_saved">Password Saved</string>
    <string name="title_language">Language</string>
    <string name="language_system">System Default</string>
    <string name="language_en">English</string>
    <string name="language_zh">简体中文</string>
    <string name="language_zh_tw">繁體中文</string>
    <string name="language_ko">한국어</string>
    <string name="language_ru">Русский</string>
    <string name="language_ja">日本語</string>
    <string name="language_ko_rkp">조선말</string>
    <string name="language_es">Español</string>
    <string name="language_de">Deutsch</string>
    <string name="language_fr">Français</string>
    <string name="language_it">Italiano</string>
    <string name="language_pt">Português</string>
    <string name="language_ar">العربية</string>
    <string name="language_hi">हिन्दी</string>
    <string name="language_tr">Türkçe</string>
    <string name="language_vi">Tiếng Việt</string>
    <string name="language_id">Bahasa Indonesia</string>
    <string name="language_pl">Polski</string>
    <string name="language_nl">Nederlands</string>
    <string name="language_ryu">Ryukyuan (Okinawan) (Incomplete)</string>
    <string name="action_move_to">Move to Folder</string>
    <string name="msg_move_success">Bookmark moved!</string>
    <string name="msg_no_folders">No folders available</string>
    <string name="root_folder">Root</string>
    <string name="label_select_folder">Select Folder</string>
    <string name="action_copy_link">Copy Link Address</string>
    <string name="action_copy_image_link">Copy Image Address</string>
    <string name="action_copy_text">Copy Text Content</string>
    <string name="action_free_copy">Free Copy Mode</string>
    <string name="action_reader_mode">Reader Mode</string>
    <string name="msg_copied">Copied to clipboard</string>
    <string name="msg_free_copy_on">Free Copy Mode On. You can now select text freely.</string>
    <string name="msg_exit_confirm">Press back again to exit</string>
    <string name="title_about">About</string>
    <string name="title_reader_mode">Reader Mode</string>
    <string name="label_font_size">Font Size</string>
    <string name="label_theme">Theme</string>
    <string name="theme_green">Eye Care</string>
    <string name="theme_beige">Beige</string>
    <string name="theme_night">Night</string>
    <string name="action_edit_tab">Edit Tab</string>
    <string name="title_edit_tab">Edit Tab</string>
    <string name="label_tab_title">Tab Title</string>
    <string name="msg_tab_updated">Tab updated</string>
    <string name="msg_reader_mode_loading">Loading reader mode...</string>
    <string name="msg_reader_mode_failed">Failed to extract content</string>
    <string name="title_password_manager">Password Manager</string>
    <string name="title_add_password">Add Password</string>
    <string name="title_edit_password">Edit Password</string>
    <string name="title_delete_password">Delete Password</string>
    <string name="title_password_details">Password Details</string>
    <string name="label_website_url">Website URL</string>
    <string name="label_username">Username / Email</string>
    <string name="label_username_short">User:</string>
    <string name="label_password">Password</string>
    <string name="label_password_short">Pass:</string>
    <string name="action_add_password">Add Password</string>
    <string name="action_edit">Edit</string>
    <string name="action_show_password">Show Password</string>
    <string name="action_copy_password">Copy Password</string>
    <string name="msg_no_passwords">No saved passwords</string>
    <string name="msg_fill_all_fields">Please fill all fields</string>
    <string name="msg_password_updated">Password updated</string>
    <string name="msg_password_deleted">Password deleted</string>
    <string name="msg_password_copied">Password copied to clipboard</string>
    <string name="msg_confirm_delete_password">Are you sure you want to delete this password?</string>
    <string name="msg_password_details">URL: %1$s\nUsername: %2$s\nPassword: %3$s</string>
    <string name="label_author">Author</string>
    <string name="author_name">Olsc</string>
    <string name="label_license">License</string>
    <string name="license_name">Apache-2.0</string>
    <string name="app_introduction">A modern browser based on the Firefox engine.</string>
    <string name="label_source_code">Source Code</string>
    <string name="source_code_url">https://github.com/Olsc/ManorBrowser</string>
    <string name="label_app_version">App Version</string>
    <string name="label_gecko_version">GeckoView Version</string>
    <string name="label_sdk_version">Android SDK Version</string>
    <string name="title_desktop_mode">Desktop Mode</string>
    <string name="title_cookies">Cookies &amp; Site Data</string>
    <string name="action_clear_all">Clear All</string>
    <string name="msg_no_cookies">No cookies found</string>
    <string name="title_extensions">Extensions</string>
    <string name="action_browse_extensions">Browse Extensions</string>
    <string name="action_manage_extensions">Manage Extensions</string>
    <string name="label_version_value">Version: %1$s</string>
    <string name="action_extensions">Installed Extensions</string>
    <string name="action_fullscreen">Full Screen Mode</string>
</resources>