<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmarks"
            android:title="@string/action_bookmarks" />
        <item
            android:id="@+id/nav_add_bookmark"
            android:icon="@drawable/ic_bookmark_add"
            android:title="@string/action_add_bookmark" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/action_history" />
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_download"
            android:title="@string/action_downloads" />
        <item
            android:id="@+id/nav_desktop_mode"
            android:icon="@drawable/ic_desktop"
            android:title="@string/title_desktop_mode"
            android:checkable="true" />
        <item
            android:id="@+id/nav_fullscreen"
            android:icon="@drawable/ic_fullscreen"
            android:title="@string/action_fullscreen"
            android:checkable="true" />
    </group>

    <item android:title="@string/title_extensions">
        <menu>
            <item
                android:id="@+id/nav_extensions_action"
                android:icon="@drawable/ic_extension"
                android:title="@string/action_extensions" />
            <item
                android:id="@+id/nav_extensions_browse"
                android:icon="@drawable/ic_store"
                android:title="@string/action_browse_extensions" />
            <item
                android:id="@+id/nav_extensions_manager"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_manage_extensions" />
        </menu>
    </item>

    <group android:id="@+id/footer_group">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>
</menu>
